--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
-    "nodemon": "^2.0.4"
+    "express-ejs-layouts": "^2.5.0",
+    "nodemon": "^2.0.4",
+    "superagent": "^6.0.0"
   }
 }
