--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
+    "method-override": "^3.0.0",
     "nodemon": "^2.0.4",
+    "pg": "^8.3.0",
     "superagent": "^6.0.0"
   }
 }
